; ModuleID = '/home/carl/AnghaBench/TDengine/src/util/src/extr_tlog.c_taosInitLog.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/util/src/extr_tlog.c_taosInitLog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TSDB_DEFAULT_LOG_BUF_SIZE = common dso_local global i32 0, align 4
@logHandle = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @taosInitLog(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* @TSDB_DEFAULT_LOG_BUF_SIZE, align 4
  %9 = call i32* @taosLogBuffNew(i32 %8)
  store i32* %9, i32** @logHandle, align 8
  %10 = load i32*, i32** @logHandle, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %25

13:                                               ; preds = %3
  %14 = load i8*, i8** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %7, align 4
  %17 = call i64 @taosOpenLogFileWithMaxLines(i8* %14, i32 %15, i32 %16)
  %18 = icmp slt i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %13
  store i32 -1, i32* %4, align 4
  br label %25

20:                                               ; preds = %13
  %21 = call i64 (...) @taosStartLog()
  %22 = icmp slt i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %20
  store i32 -1, i32* %4, align 4
  br label %25

24:                                               ; preds = %20
  store i32 0, i32* %4, align 4
  br label %25

25:                                               ; preds = %24, %23, %19, %12
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i32* @taosLogBuffNew(i32) #1

declare dso_local i64 @taosOpenLogFileWithMaxLines(i8*, i32, i32) #1

declare dso_local i64 @taosStartLog(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
